--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ description: "A great Jekyll theme developed by Sal @wowthemesnet."
 <!-- Begin post excerpts, let's highlight the first 4 posts on top -->
 <div class="row remove-site-content-margin">
     <!-- latest post -->
+	<h4 class="col-md-12"><span>News</span></h4>
     {% assign latest_post = site.posts[0] %}
     <div class="col-md-6">
     <div class="card border-0 mb-4 box-shadow">   
@@ -135,7 +136,9 @@ description: "A great Jekyll theme developed by Sal @wowthemesnet."
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
 {% for post in site.posts %} 
 {% if post.tags contains "sticky" %}
+<h4 class="col-md-12"><span>We recommend</span></h4>
 <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-lightblue position-relative">
+
     <div class="pl-4 pr-0 h-100 tofront">
         <div class="row justify-content-between">
             <div class="col-md-6 pt-6 pb-6 pr-lg-4 align-self-center">
